--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <!-- Eliminé USE_EXACT_ALARM ya que no es necesario para este caso -->
 
     <application
         android:name=".MyApp"
@@ -44,11 +44,15 @@
             android:name=".CalendarioActivity"
             android:exported="true" />
 
-        <!-- Actividad NotificacionReceiver (BroadcastReceiver) -->
-        <receiver android:name=".NotificacionReceiver"
-            android:exported="false">
+        <!-- Receiver para notificaciones -->
+        <receiver
+            android:name=".NotificacionReceiver"
+            android:exported="false"
+            android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <!-- Agregué QUICKBOOT_POWERON para algunos dispositivos -->
             </intent-filter>
         </receiver>
 
