--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <!-- Eliminé USE_EXACT_ALARM ya que no es necesario para este caso -->
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".MyApp"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -19,7 +16,6 @@
         android:theme="@style/Theme.ControlPorcinoCHL"
         tools:targetApi="31">
 
-        <!-- Actividad principal -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -29,40 +25,21 @@
             </intent-filter>
         </activity>
 
-        <!-- Actividad ListaCerdasActivity -->
-        <activity
-            android:name=".ListaCerdasActivity"
-            android:exported="true" />
+        <activity android:name=".ListaCerdasActivity" android:exported="true" />
+        <activity android:name=".RegistrarCerdaActivity" android:exported="true" />
+        <activity android:name=".CalendarioActivity" android:exported="true" />
+        <activity android:name=".DetalleCerdaActivity" android:exported="true" />
+        <activity android:name=".DetalleEventosActivity" android:exported="false" />
 
-        <!-- Actividad RegistrarCerdaActivity -->
-        <activity
-            android:name=".RegistrarCerdaActivity"
-            android:exported="true" />
-
-        <!-- Actividad CalendarioActivity -->
-        <activity
-            android:name=".CalendarioActivity"
-            android:exported="true" />
-
-        <!-- Receiver para notificaciones -->
         <receiver
             android:name=".NotificacionReceiver"
-            android:exported="false"
-            android:enabled="true">
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
+                <action android:name="com.control.porcinochl.ACTION_NOTIFICATION" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-                <!-- Agregué QUICKBOOT_POWERON para algunos dispositivos -->
             </intent-filter>
         </receiver>
-
-        <activity
-            android:name=".DetalleCerdaActivity"
-            android:exported="true" />
-
-        <activity
-            android:name=".DetalleEventosActivity"
-            android:exported="false" />
 
     </application>
 </manifest>
